[gd_scene load_steps=48 format=3 uid="uid://bol1dc0pyta2f"]

[ext_resource type="Script" uid="uid://cepuwmx1ceef3" path="res://goals.gd" id="2_2dw41"]
[ext_resource type="Script" uid="uid://dttcldpevggnp" path="res://hand.gd" id="2_p7tmn"]
[ext_resource type="PackedScene" uid="uid://cjcehqrfoxav3" path="res://addons/hand_pose_detector/hands/LeftHandHumanoid.gltf" id="2_pvxhv"]
[ext_resource type="Texture2D" uid="uid://8riwg23po5sb" path="res://goals/E-WEB-Goal-01.png" id="2_sasra"]
[ext_resource type="PackedScene" uid="uid://dabmoo0spa6vg" path="res://addons/hand_pose_detector/hands/RightHandHumanoid.gltf" id="3_6h1ut"]
[ext_resource type="Script" uid="uid://dya4sxc8awaw0" path="res://addons/hand_pose_detector/hand_pose_detector.gd" id="3_b11sm"]
[ext_resource type="PackedScene" uid="uid://5sggqhc8uux2" path="res://goal_box.tscn" id="3_coq8p"]
[ext_resource type="Texture2D" uid="uid://p8putbgjitl6" path="res://goals/E-WEB-Goal-03.png" id="4_njel3"]
[ext_resource type="Script" uid="uid://bbey0wli3q6jp" path="res://xr_camera_3d.gd" id="4_rf3s6"]
[ext_resource type="Texture2D" uid="uid://k1c7jpvbeutp" path="res://goals/E-WEB-Goal-04.png" id="5_vr1i5"]
[ext_resource type="PackedScene" uid="uid://df5hynbooj1uj" path="res://addons/hand_pose_detector/hand_pose_detector.tscn" id="6_mfkbt"]
[ext_resource type="Texture2D" uid="uid://bb7ay212glga4" path="res://goals/E-WEB-Goal-05.png" id="6_rpuu0"]
[ext_resource type="Resource" uid="uid://ckjd0xa2a240p" path="res://addons/hand_pose_detector/poses/standard_pose_set.tres" id="7_077gh"]
[ext_resource type="Texture2D" uid="uid://dhhgj3m8gvcir" path="res://goals/E-WEB-Goal-06.png" id="7_oo8pe"]
[ext_resource type="Texture2D" uid="uid://dgb8pq8idsch3" path="res://goals/E-WEB-Goal-07.png" id="8_4gito"]
[ext_resource type="Texture2D" uid="uid://ct42pjwfwvjn0" path="res://goals/E-WEB-Goal-09.png" id="9_fbuy2"]
[ext_resource type="Texture2D" uid="uid://d2b0flvvgola7" path="res://goals/E-WEB-Goal-10.png" id="10_fbuy2"]
[ext_resource type="Texture2D" uid="uid://c4wdugn8nqwsr" path="res://goals/E-WEB-Goal-08.png" id="10_ykxp3"]
[ext_resource type="Texture2D" uid="uid://ch5ldi5mlxetk" path="res://goals/E-WEB-Goal-11.png" id="11_0k8yu"]
[ext_resource type="AudioStream" uid="uid://jv4x7qsafgv4" path="res://sounds/iron-money-coins-sound-of-money-falling-coins-11987.mp3" id="11_6f7tj"]
[ext_resource type="Texture2D" uid="uid://yrkevmxuio66" path="res://goals/E-WEB-Goal-02.png" id="11_b11sm"]
[ext_resource type="AudioStream" uid="uid://dgbl2d112mlbd" path="res://sounds/ai sounds/staff-canteen-background-33214.mp3" id="12_6f7tj"]
[ext_resource type="Texture2D" uid="uid://d1n0828jvlp8c" path="res://goals/E-WEB-Goal-12.png" id="12_hiucn"]
[ext_resource type="AudioStream" uid="uid://bu8m01rl0e06q" path="res://sounds/ai sounds/running-on-gravel-301880.mp3" id="13_6f7tj"]
[ext_resource type="Texture2D" uid="uid://dx70jn77fea38" path="res://goals/E-WEB-Goal-13.png" id="13_k6its"]
[ext_resource type="Texture2D" uid="uid://cse8qbjky4vee" path="res://goals/E-WEB-Goal-14.png" id="14_2dw41"]
[ext_resource type="AudioStream" uid="uid://bouddr0e5ff36" path="res://sounds/ai sounds/classroom-background-54177.mp3" id="14_6f7tj"]
[ext_resource type="AudioStream" uid="uid://0mdu5m0hcg7a" path="res://sounds/ytmp3free.cc_mary-mcaleese-talks-to-diis-on-ideas-that-can-change-our-lives-youtubemp3free.org.mp3" id="15_6f7tj"]
[ext_resource type="Texture2D" uid="uid://cuevvbvgm2wpf" path="res://goals/E-WEB-Goal-15.png" id="15_k6its"]
[ext_resource type="Texture2D" uid="uid://dp4wvb4oqjifk" path="res://goals/E-WEB-Goal-16.png" id="16_2dw41"]
[ext_resource type="AudioStream" uid="uid://jrwcgdxkf1ij" path="res://sounds/ai sounds/tap-water-98206.mp3" id="16_j5gtg"]
[ext_resource type="AudioStream" uid="uid://d1m6bhf3qido2" path="res://sounds/ai sounds/windmill-26886.mp3" id="17_jpnay"]
[ext_resource type="Texture2D" uid="uid://d1ba3qfb3qa30" path="res://goals/E-WEB-Goal-17.png" id="17_ykxp3"]
[ext_resource type="AudioStream" uid="uid://s5oj77r1j0sd" path="res://sounds/ai sounds/factory-ambience-131855.mp3" id="19_u4y7u"]
[ext_resource type="AudioStream" uid="uid://cugqyhut5u8bf" path="res://sounds/ai sounds/construction-interior-tall-building-50151.mp3" id="19_v6rpk"]
[ext_resource type="AudioStream" uid="uid://dgcn2u1ec5l2c" path="res://sounds/ai sounds/city-ambience-121693.mp3" id="20_1hang"]
[ext_resource type="AudioStream" uid="uid://8qwttvd6jvkj" path="res://sounds/ai sounds/recycling-can-return-55990.mp3" id="21_jxdac"]
[ext_resource type="AudioStream" uid="uid://crk61a5k8qbu5" path="res://sounds/ambient-wave-48-tribute-17243.mp3" id="22_6h1ut"]
[ext_resource type="AudioStream" uid="uid://dt2jgdiun50ah" path="res://sounds/ai sounds/sound-effect-seagulls-157829.mp3" id="22_fqo83"]
[ext_resource type="AudioStream" uid="uid://b0xsl6sqnhku1" path="res://sounds/ai sounds/underwater-sounds-376891.mp3" id="23_u4y7u"]
[ext_resource type="AudioStream" uid="uid://b478denpfxtcx" path="res://sounds/ai sounds/african-savanna-2-23769.mp3" id="24_e2pu3"]
[ext_resource type="AudioStream" uid="uid://b7srdxjskh8p0" path="res://sounds/ai sounds/goal2.mp3" id="32_v6rpk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6adnx"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_e2pu3"]
sky_material = SubResource("ProceduralSkyMaterial_6adnx")

[sub_resource type="Environment" id="Environment_ia1lp"]
background_mode = 1
sky = SubResource("Sky_e2pu3")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SphereShape3D" id="SphereShape3D_pvxhv"]
radius = 0.05

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_rf3s6"]

[node name="cubes_scene" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ia1lp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D" node_paths=PackedStringArray("spawn_in_front")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10548, 0)
script = ExtResource("4_rf3s6")
spawn_in_front = NodePath("../../goals")

[node name="AudioListener3D" type="AudioListener3D" parent="XROrigin3D/XRCamera3D"]

[node name="left" type="XRNode3D" parent="XROrigin3D"]
tracker = &"/user/hand_tracker/left"
show_when_tracked = true
script = ExtResource("2_p7tmn")

[node name="HandPoseDetector" type="Node" parent="XROrigin3D/left"]
script = ExtResource("3_b11sm")
hand_pose_set = ExtResource("7_077gh")
metadata/_custom_type_script = "uid://dya4sxc8awaw0"

[node name="left_hand" type="Area3D" parent="XROrigin3D/left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0680579, 0.159387)

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/left/left_hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.144068)
shape = SubResource("SphereShape3D_pvxhv")

[node name="LeftHandHumanoid2" parent="XROrigin3D/left" instance=ExtResource("2_pvxhv")]

[node name="XRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/left/LeftHandHumanoid2/LeftHandHumanoid/Skeleton3D" index="1"]

[node name="right" type="XRNode3D" parent="XROrigin3D"]
tracker = &"/user/hand_tracker/right"
show_when_tracked = true
script = ExtResource("2_p7tmn")

[node name="right_hand" type="Area3D" parent="XROrigin3D/right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0676188, 0.159387)

[node name="CollisionShape3D" type="CollisionShape3D" parent="XROrigin3D/right/right_hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.144068)
shape = SubResource("SphereShape3D_pvxhv")

[node name="RightHandHumanoid2" parent="XROrigin3D/right" instance=ExtResource("3_6h1ut")]

[node name="XRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/right/RightHandHumanoid2/RightHandHumanoid/Skeleton3D" index="0"]
hand_tracker = &"/user/hand_tracker/right"

[node name="HandPoseDetector" parent="XROrigin3D/right" instance=ExtResource("6_mfkbt")]
hand_tracker_name = "/user/hand_tracker/right"
hand_pose_set = ExtResource("7_077gh")

[node name="goals" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.21558, 1.23709, -2.44548)
script = ExtResource("2_2dw41")
sounds = Array[AudioStream]([ExtResource("11_6f7tj"), ExtResource("12_6f7tj"), ExtResource("13_6f7tj"), ExtResource("14_6f7tj"), ExtResource("15_6f7tj"), ExtResource("16_j5gtg"), ExtResource("17_jpnay"), ExtResource("19_v6rpk"), ExtResource("19_u4y7u"), ExtResource("32_v6rpk"), ExtResource("20_1hang"), ExtResource("21_jxdac"), ExtResource("22_fqo83"), ExtResource("23_u4y7u"), ExtResource("24_e2pu3"), null, null])

[node name="goal_box" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("2_sasra")

[node name="goal_box2" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("11_b11sm")
goal = 2

[node name="goal_box3" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("4_njel3")
goal = 3

[node name="goal_box4" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("5_vr1i5")
goal = 4

[node name="goal_box5" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("6_rpuu0")
goal = 5

[node name="goal_box6" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("7_oo8pe")
goal = 6

[node name="goal_box7" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("8_4gito")
goal = 7

[node name="goal_box8" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("10_ykxp3")
goal = 8

[node name="goal_box9" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("9_fbuy2")
goal = 9

[node name="goal_box10" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("10_fbuy2")
goal = 10

[node name="goal_box11" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("11_0k8yu")
goal = 11

[node name="goal_box12" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("12_hiucn")
goal = 12

[node name="goal_box13" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("13_k6its")
goal = 13

[node name="goal_box14" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("14_2dw41")
goal = 14

[node name="goal_box15" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("15_k6its")
goal = 15

[node name="goal_box16" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("16_2dw41")
goal = 16

[node name="goal_box17" parent="goals" instance=ExtResource("3_coq8p")]
image = ExtResource("17_ykxp3")
goal = 17

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="goals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.977309, 0.484867, 0)
stream = ExtResource("22_6h1ut")
volume_db = -40.93
autoplay = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_rf3s6")

[connection signal="pose_ended" from="XROrigin3D/left/HandPoseDetector" to="XROrigin3D/left" method="_on_hand_pose_detector_pose_ended"]
[connection signal="pose_started" from="XROrigin3D/left/HandPoseDetector" to="XROrigin3D/left" method="_on_hand_pose_detector_pose_started"]
[connection signal="area_entered" from="XROrigin3D/left/left_hand" to="XROrigin3D/left" method="_on_right_hand_area_entered"]
[connection signal="area_entered" from="XROrigin3D/right/right_hand" to="XROrigin3D/right" method="_on_right_hand_area_entered"]
[connection signal="area_exited" from="XROrigin3D/right/right_hand" to="XROrigin3D/right" method="_on_right_hand_area_exited"]
[connection signal="pose_ended" from="XROrigin3D/right/HandPoseDetector" to="XROrigin3D/right" method="_on_hand_pose_detector_pose_ended"]
[connection signal="pose_started" from="XROrigin3D/right/HandPoseDetector" to="XROrigin3D/right" method="_on_hand_pose_detector_pose_started"]

[editable path="XROrigin3D/left/LeftHandHumanoid2"]
[editable path="XROrigin3D/right/RightHandHumanoid2"]
